--- a/.github/workflows/xiaoxihui.yml
+++ b/.github/workflows/xiaoxihui.yml
@@ -1,13 +1,13 @@
 
 name: xiaoxihui_x86_64
 
-on: 
-  release:
-    types: [published]
+on:
+  repository_dispatch:
+  workflow_dispatch:
 
-  push:
-    branches: 
-      - master
+  #push:
+  #  branches: 
+  #    - master
 
   #schedule:
   #  - cron: 0 8 * * 5
