--- a/.github/workflows/fxhack.yml
+++ b/.github/workflows/fxhack.yml
@@ -82,7 +82,7 @@ jobs:
     
     - name: 配置定制
       env:
-        CONFIG_FILE: 'xiaoxihui.config'
+        CONFIG_FILE: 'fxhack.config'
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         chmod +x ./customize.sh && ./customize.sh
