--- a/fxhack.config
+++ b/fxhack.config
@@ -96,3 +96,7 @@ CONFIG_PACKAGE_luci-app-frpc=y
 # CONFIG_PACKAGE_trojan-plus=y
 # CONFIG_PACKAGE_chinadns-ng=y
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
+CONFIG_PACKAGE_wireguard-tools=y
+CONFIG_PACKAGE_luci-app-wireguard=y
+CONFIG_PACKAGE_luci-proto-wireguard=y
+CONFIG_PACKAGE_luci-i18n-wireguard-zh-cn=y
