--- a/.github/workflows/fxhack.yml
+++ b/.github/workflows/fxhack.yml
@@ -82,7 +82,7 @@ jobs:
     
     - name: 配置定制
       env:
-        CONFIG_FILE: 'fxhack.config'
+        CONFIG_FILE: 'x86_64.config'
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         chmod +x ./自定义脚本.sh && ./自定义脚本.sh
