--- a/.github/workflows/fxhack.yml
+++ b/.github/workflows/fxhack.yml
@@ -1,18 +1,18 @@
 
-name: fxhack
+name: Openwrt自动编译
 
 #手动从Actions启动
 on:
   repository_dispatch:
   workflow_dispatch:
-
+#改动后自动编译
   #push:
   #  branches: 
   #    - master
-
+#定时编译
   #schedule:
   #  - cron: 0 8 * * 5
-  
+#点击Star编译  
   #watch:
   #  types: [started]
 
@@ -98,7 +98,7 @@ jobs:
     - name: 开始编译固件
       working-directory: ./openwrt
       run: |
-        echo -e "$(nproc) thread build."
+        echo -e "正在以 $(nproc) 线程编译。"
         make -j$(nproc) V=s
 
     - name : 上传文件
