--- a/.github/workflows/fxhack.yml
+++ b/.github/workflows/fxhack.yml
@@ -11,8 +11,7 @@ on:
         description: '输入要编译的配置文件名称'
         required: true
         default: 'x86_64.config'
-env:
-  CONFIG_FILE:${{ github.event.inputs.config }}
+
   
 #改动后自动编译
   #push:
@@ -86,8 +85,8 @@ jobs:
     #    git clone https://github.com/xiaorouji/openwrt-package.git package/lienol
     #    git clone "your_github_link" package/"your_folder_name"          
     - name: 配置定制
-      #env:
-        #CONFIG_FILE: 'x86_64.config'
+      env:
+        CONFIG_FILE: 'x86_64.config'
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         chmod +x ./自定义脚本.sh && ./自定义脚本.sh
