--- a/.github/workflows/fxhack.yml
+++ b/.github/workflows/fxhack.yml
@@ -11,7 +11,7 @@ on:
         description: '请输入配置文件名称'
         required: false
         default: 'x86_64.config'
-echo "Hello ${{ github.event.inputs.name }}!"
+echo "Hello ${{ github.event.inputs.config }}!"
 #改动后自动编译
   #push:
   #  branches: 
