--- a/.github/workflows/fxhack.yml
+++ b/.github/workflows/fxhack.yml
@@ -10,7 +10,7 @@ on:
         description: '请输入配置文件名称'
         required: false
         default: 'x86_64.config'
-echo "Hello ${{ github.event.inputs.config }}!"
+#echo "Hello ${{ github.event.inputs.config }}!"
 #改动后自动编译
   #push:
   #  branches: 
@@ -25,15 +25,15 @@ echo "Hello ${{ github.event.inputs.config }}!"
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     - name: 校验
       uses: actions/checkout@master
-
     - name: 下载编译所需插件
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
+        echo "开始编译文件 ${{ github.event.inputs.config }}!"
+        #CONFIG_FILE:$github.event.inputs.config
         docker rmi `docker images -q`
         echo "Deleting files, please wait ..."
         sudo rm -rf \
@@ -83,8 +83,8 @@ jobs:
     #    git clone https://github.com/xiaorouji/openwrt-package.git package/lienol
     #    git clone "your_github_link" package/"your_folder_name"          
     - name: 配置定制
-      env:
-        CONFIG_FILE: 'x86_64.config'
+      #env:
+        #CONFIG_FILE: 'x86_64.config'
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         chmod +x ./自定义脚本.sh && ./自定义脚本.sh
