--- a/.github/workflows/fxhack.yml
+++ b/.github/workflows/fxhack.yml
@@ -10,7 +10,6 @@ on:
         description: '请输入配置文件名称'
         required: false
         default: 'x86_64.config'
-#echo "Hello ${{ github.event.inputs.config }}!"
 #改动后自动编译
   #push:
   #  branches: 
@@ -33,7 +32,7 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         echo "开始编译文件 ${{ github.event.inputs.config }}!"
-        #CONFIG_FILE:$github.event.inputs.config
+        CONFIG_FILE:$github.event.inputs.config
         docker rmi `docker images -q`
         echo "Deleting files, please wait ..."
         sudo rm -rf \
