--- a/.github/workflows/fxhack.yml
+++ b/.github/workflows/fxhack.yml
@@ -32,7 +32,6 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         echo "开始编译文件 ${{ github.event.inputs.config }}"
-        CONFIG_FILE:${{ github.event.inputs.config }}
         docker rmi `docker images -q`
         echo "Deleting files, please wait ..."
         sudo rm -rf \
@@ -82,8 +81,9 @@ jobs:
     #    git clone https://github.com/xiaorouji/openwrt-package.git package/lienol
     #    git clone "your_github_link" package/"your_folder_name"          
     - name: 配置定制
-      #env:
+      env:
         #CONFIG_FILE: 'x86_64.config'
+        CONFIG_FILE: ${{ github.event.inputs.config }}
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         chmod +x ./自定义脚本.sh && ./自定义脚本.sh
