--- a/.github/workflows/fxhack.yml
+++ b/.github/workflows/fxhack.yml
@@ -1,4 +1,4 @@
-name: ${{ github.event.inputs.config }}
+#name: Openwrt全自动编译
 
 #手动从Actions启动
 #github.event.inputs.config
@@ -20,8 +20,8 @@ on:
 #点击Star编译  
   #watch:
   #  types: [started]
-
-jobs:
+name: Openwrt全自动编译
+jobs:${{ github.event.inputs.config }}
   build:
     runs-on: ubuntu-latest
     steps:
