--- a/.github/workflows/fxhack.yml
+++ b/.github/workflows/fxhack.yml
@@ -1,4 +1,4 @@
-#name: Openwrt全自动编译
+name: Openwrt全自动编译
 
 #手动从Actions启动
 #github.event.inputs.config
@@ -20,7 +20,6 @@ on:
 #点击Star编译  
   #watch:
   #  types: [started]
-name: ${{ github.event.inputs.config }}
 jobs:
   build:
     runs-on: ubuntu-latest
