--- a/.github/workflows/fxhack.yml
+++ b/.github/workflows/fxhack.yml
@@ -103,7 +103,6 @@ jobs:
     - name : 上传文件
       uses: actions/upload-artifact@master
       with:
-        #name: OpenWrt
-        name: $CONFIG_FILE
+        name: OpenWrt
         #path: openwrt/bin
         path: openwrt/bin/targets/*/*/*.img
