--- a/.github/workflows/fxhack.yml
+++ b/.github/workflows/fxhack.yml
@@ -103,6 +103,7 @@ jobs:
     - name : 上传文件
       uses: actions/upload-artifact@master
       with:
-        name: OpenWrt
+        #name: OpenWrt
+        name: ${{ github.event.inputs.config }}
         #path: openwrt/bin
         path: openwrt/bin/targets/*/*/*.img
