--- a/.github/workflows/fxhack.yml
+++ b/.github/workflows/fxhack.yml
@@ -106,4 +106,4 @@ jobs:
         #name: OpenWrt
         name: ${{ github.event.inputs.config }}
         #path: openwrt/bin
-        path: openwrt/bin/targets/*/*/*.img
+        path: openwrt/bin/targets/*/*/*combined.img
