--- a/.github/workflows/fxhack.yml
+++ b/.github/workflows/fxhack.yml
@@ -103,7 +103,7 @@ jobs:
     - name : 上传文件
       uses: actions/upload-artifact@master
       with:
-        #name: OpenWrt
-        name: ${{ github.event.inputs.config }}
+        name: OpenWrt
+        #name: ${{ github.event.inputs.config }}
         path: openwrt/bin
         #path: openwrt/bin/targets/*/*/*combined.img
