--- a/.github/workflows/fxhack.yml
+++ b/.github/workflows/fxhack.yml
@@ -1,5 +1,4 @@
-name: Openwrt全自动编译
-
+name: Openwrt
 on:
   repository_dispatch:
   workflow_dispatch:
@@ -41,17 +40,13 @@ jobs:
         sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev patch python3 python2.7 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex node-uglify git gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx-ucl libelf-dev autoconf automake libtool autopoint device-tree-compiler g++-multilib antlr3 gperf wget curl swig rsync
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
-    
-    #下载LEDE源代码
     - name: 下载源代码
       env: 
         REPO_URL: https://github.com/coolsnowwolf/lede
         REPO_BRANCH: master
       run: |
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
-        #进入openwrt目录
         cd openwrt
-        #去掉目录下feeds.conf.default里面src-git helloworld前面的#
         sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
  
     - name: 更新官方及第三方源
@@ -59,13 +54,7 @@ jobs:
       run: |
         ./scripts/feeds update -a
         ./scripts/feeds install -a
-        ./scripts/feeds install -a
-
-    #- name: Import external feeds
-    #  working-directory: ./openwrt
-    #  run: |
-    #    git clone https://github.com/xiaorouji/openwrt-package.git package/lienol
-    #    git clone "your_github_link" package/"your_folder_name"          
+        ./scripts/feeds install -a        
     - name: 配置定制
       env:
         #CONFIG_FILE: 'x86_64.config'
@@ -74,8 +63,6 @@ jobs:
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         chmod +x ./自定义脚本.sh && ./自定义脚本.sh
         cd openwrt && make defconfig
-        
-    
     - name: 下载配置文件源码
       working-directory: ./openwrt
       run: |
@@ -85,9 +72,7 @@ jobs:
     - name: 开始编译固件
       working-directory: ./openwrt
       run: |
-        echo -e "正在以 $(nproc) 线程编译。"
         make -j$(nproc) V=s
-
     - name : 上传文件
       uses: actions/upload-artifact@master
       with:
