--- a/.github/workflows/fxhack.yml
+++ b/.github/workflows/fxhack.yml
@@ -60,7 +60,7 @@ jobs:
         CONFIG_FILE: "${{ github.event.inputs.config }}"
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        chmod +x ./自定义脚本.sh && ./自定义脚本.sh
+        chmod +x ./diy.sh && ./diy.sh
         cd openwrt && make defconfig
     - name: 下载配置文件源码
       working-directory: ./openwrt
