--- a/.github/workflows/ONLY IMG.yml
+++ b/.github/workflows/ONLY IMG.yml
@@ -32,7 +32,6 @@ jobs:
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         cd openwrt
         sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
- 
     - name: 更新官方及第三方源
       working-directory: ./openwrt
       run: |
@@ -41,7 +40,6 @@ jobs:
         ./scripts/feeds install -a        
     - name: 配置定制
       env:
-        #CONFIG_FILE: 'x86_64.config'
         CONFIG_FILE: "${{ github.event.inputs.config }}"
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
@@ -60,6 +58,6 @@ jobs:
     - name : 上传文件
       uses: actions/upload-artifact@master
       with:
-        name: OpenWrt
+        name: OpenWrt_Img
         #path: openwrt/bin
         path: openwrt/bin/targets/*/*/*combined.img
