--- a/.github/workflows/通用编译.yml
+++ b/.github/workflows/通用编译.yml
@@ -60,7 +60,7 @@ jobs:
         CONFIG_FILE: "${{ github.event.inputs.config }}"
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        chmod +x ./diy.sh && ./diy.sh
+        chmod +x ./diy_currency.sh && ./diy_currency.sh
         cd openwrt && make defconfig
     - name: 下载配置文件源码
       working-directory: ./openwrt
