--- a/.github/workflows/ONLY IMG.yml
+++ b/.github/workflows/ONLY IMG.yml
@@ -7,6 +7,10 @@ on:
         description: '请输入配置文件名称'
         required: false
         default: 'x86_64.config'
+      script:
+        description: '是否使用自定义脚本'
+        required: false
+        default: 'yes'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -41,9 +45,11 @@ jobs:
     - name: 配置定制
       env:
         CONFIG_FILE: "${{ github.event.inputs.config }}"
+        SCRIPT_FILE: "${{ github.event.inputs.script }}"
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        chmod +x ./diy.sh && ./diy.sh
+        if $SCRIPT_FILE ="yes":
+          chmod +x ./diy.sh && ./diy.sh
         cd openwrt && make defconfig
     - name: 下载配置文件源码
       working-directory: ./openwrt
