--- a/.github/workflows/ONLY IMG.yml
+++ b/.github/workflows/ONLY IMG.yml
@@ -13,7 +13,8 @@ on:
         default: 'yes'
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
+    #runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@master
