--- a/.github/workflows/ONLY IMG.yml
+++ b/.github/workflows/ONLY IMG.yml
@@ -46,6 +46,7 @@ jobs:
     - name: 配置定制
       env:
         CONFIG_FILE: "${{ github.event.inputs.config }}"
+        SCRIPT_FILE: "${{ github.event.inputs.script }}"
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         if $SCRIPT_FILE = "yes":
