--- a/.github/workflows/fxhack.yml
+++ b/.github/workflows/fxhack.yml
@@ -19,5 +19,5 @@ jobs:
         a=1
         if a == 1:
           print("a==1")
-        if a = 2:
-          print("a=2")
+        else:
+          print("no")
