--- a/.github/workflows/fxhack.yml
+++ b/.github/workflows/fxhack.yml
@@ -15,9 +15,7 @@ jobs:
         sudo -E apt-get update
         sudo -E apt-get -y install python3 python2.7
     - name: 代码调试过程
+      env:
+        D11: 1
       run: |
-        a=1
-        if a == 1:
-          print("a==1")
-        else:
-          print("no")
+        if D11 == 1:  print("a==1")
