--- a/.github/workflows/ONLY IMG.yml
+++ b/.github/workflows/ONLY IMG.yml
@@ -55,7 +55,9 @@ jobs:
     - name: 开始编译固件
       working-directory: ./openwrt
       run: |
+        echo -e "$(nproc) thread build."
         make -j$(nproc) V=s
+        echo -e "done!"
     - name : 上传文件
       uses: actions/upload-artifact@master
       with:
