--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -61,6 +61,6 @@ jobs:
     - name : 上传文件
       uses: actions/upload-artifact@master
       with:
-        name: OpenWrt_Img
-        #path: openwrt/bin
-        path: openwrt/bin/targets/*/*/*combined.img
+        name: OpenWrt
+        path: openwrt/bin
+        #path: openwrt/bin/targets/*/*/*combined.img
