--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -32,7 +32,7 @@ jobs:
       run: |
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         cd openwrt
-        sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
+        #sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
     - name: 更新官方及第三方源
       working-directory: ./openwrt
       run: |
