--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -26,7 +26,7 @@ jobs:
         CONFIG_FILE: "${{ github.event.inputs.config }}"
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE lede/.config
-        chmod +x ./diy.sh && ./diy.sh
+        #chmod +x ./diy.sh && ./diy.sh
         cd lede && make defconfig
         make download -j$(nproc)
     - name: 开始编译固件
