--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -17,22 +17,21 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 python2.7 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler g++-multilib antlr3 gperf wget curl swig rsync
-        git clone https://github.com/coolsnowwolf/lede
-        cd lede
-        ./scripts/feeds update -a
-        ./scripts/feeds install -a   
+        git clone https://github.com/coolsnowwolf/lede 
     - name: 配置定制过程
       env:
         CONFIG_FILE: "${{ github.event.inputs.config }}"
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE lede/.config
         #chmod +x ./diy.sh && ./diy.sh
-        cd lede && make defconfig
-        make download -j$(nproc)
     - name: 开始编译固件
       working-directory: ./lede
       run: |
+        ./scripts/feeds update -a
+        ./scripts/feeds install -a   
+        make defconfig
         echo -e "$(nproc) thread build."
+        make download -j$(nproc)
         make -j$(nproc) V=s
         echo -e "done!"
     - name : 上传固件
