--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -25,6 +25,8 @@ jobs:
         CONFIG_FILE: "${{ github.event.inputs.config }}"
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+        sed -i '1i CONFIG_KERNEL_BUILD_USER="fxhack"' openwrt/.config
+        sed -i '1i CONFIG_GRUB_TITLE="OpenWrt by fxhack"' openwrt/.config
         chmod +x ./diy.sh && ./diy.sh
     - name: 开始编译固件
       working-directory: ./openwrt
