--- a/test.config
+++ b/test.config
@@ -1,3 +1,6 @@
+CONFIG_TARGET_ramips=y
+CONFIG_TARGET_ramips_mt7620=y
+CONFIG_TARGET_ramips_mt7620_DEVICE_xiaomi_miwifi-mini=y
 # CONFIG_PACKAGE_base-files is not set
 # CONFIG_PACKAGE_block-mount is not set
 # CONFIG_PACKAGE_busybox is not set
